Fixed footer overlap issue (BZ #720401)

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -1,6 +1,6 @@
 /* ###########################################################################
 Generated SCSS for Aeolus UI [aeolus_ui]
-Compiled on Wed Jun 29 20:41:07 -0700 2011
+Compiled on Wed Jul 13 12:26:53 -0700 2011
 ########################################################################### */
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -653,7 +653,7 @@ strong, em, b, i{ font-family: $font-family-em; }
 #primary-container{
   position: relative;
   min-height: 100%;
-  margin-bottom: -40px;
+  display: block;
 }
 
 /* Content */
@@ -2532,7 +2532,7 @@ footer.standard{
   height: 40px;
   width: 100%;
   font-size: 11px;
-  clear:both;
+  clear: both;
 
   div.container{
     margin: 0 auto;
